# docs/openapi.yaml
@@ -1,158 +1,149 @@
-openapi: "3.0.0"
+openapi: '3.0.0'
 info:
-  description: "API docs for Re:Store, a project for Garuda Hacks"
-  version: "1.0.0"
-  title: "Re:Store API"
+  description: 'API docs for Re:Store, a project for Garuda Hacks'
+  version: '1.0.0'
+  title: 'Re:Store API'
   contact:
-    email: "re-space@gmail.com"
+    email: 're-space@gmail.com'
   license:
-    name: "Unlicensed"
+    name: 'Unlicensed'
 tags:
-- name: "user"
-- name: "space"
-- name: "rent"
+  - name: 'user'
+  - name: 'space'
+  - name: 'rent'
 paths:
   /authenticate:
     post:
       tags:
-      - "user"
+        - 'user'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AuthQuery"
+              $ref: '#/components/schemas/AuthQuery'
       responses:
         200:
-          description: "OK"
+          description: 'OK'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Token"
+                $ref: '#/components/schemas/Token'
   /register:
     post:
       tags:
-      - "user"
+        - 'user'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AuthQuery"
+              $ref: '#/components/schemas/AuthQuery'
       responses:
         200:
-          description: "OK"
+          description: 'OK'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Token"
+                $ref: '#/components/schemas/Token'
   /spaces:
     get:
-      tags: 
-      - "space"
-      responses:
-        200:
-          description: "Returns top spaces in current location"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Spaces"
-  /malls:
-    get:
-      tags: 
-      - "space"
-      responses:
-        200:
-          description: "Returns top malls in current location"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Malls"
-  /malls/{mall_id}/spaces:
-    get:
-      tags: 
-      - "space"
+      tags:
+        - 'space'
       parameters:
         - name: mall_id
-          in: path
-          description: "Mall ID"
-          required: true
+          in: query
+          description: 'Filter by Mall ID'
+          required: false
           schema:
             type: string
             format: uuid
       responses:
         200:
-          description: "Returns all spaces in mall with id = mall_id"
+          description: 'Returns top spaces in current location'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Spaces"
+                $ref: '#/components/schemas/Spaces'
+
+  /malls:
+    get:
+      tags:
+        - 'space'
+      responses:
+        200:
+          description: 'Returns top malls in current location'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Malls'
+
   /rents:
     get:
       tags:
-      - "rent"
+        - 'rent'
       security:
         - JWTAuth: []
       responses:
         200:
-          description: "Returns all rents owned by a user"
+          description: 'Returns all rents owned by a user'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Rents"
+                $ref: '#/components/schemas/Rents'
         403:
-          description: "Unauthorized"
+          description: 'Unauthorized'
     post:
       tags:
-      - "rent"
+        - 'rent'
       security:
         - JWTAuth: []
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateRentQuery"
+              $ref: '#/components/schemas/CreateRentQuery'
       responses:
         200:
-          description: "Returns newly created rent"
+          description: 'Returns newly created rent'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Rent"
+                $ref: '#/components/schemas/Rent'
         403:
-          description: "Unauthorized"
+          description: 'Unauthorized'
   /rents/watch:
     get:
       tags:
-      - "rent"
+        - 'rent'
       security:
         - JWTAuth: []
       responses:
         200:
-          description: "Returns all rents watchlisted by a user"
+          description: 'Returns all rents watchlisted by a user'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Watchlists"
+                $ref: '#/components/schemas/Watchlists'
         403:
-          description: "Unauthorized"
+          description: 'Unauthorized'
     post:
       tags:
-      - "rent"
+        - 'rent'
       security:
         - JWTAuth: []
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateWatchlistsQuery"
+              $ref: '#/components/schemas/CreateWatchlistsQuery'
       responses:
         200:
-          description: "Returns newly created rent"
+          description: 'Returns newly created rent'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Rent"
+                $ref: '#/components/schemas/Rent'
         403:
-          description: "Unauthorized"
+          description: 'Unauthorized'
 components:
   schemas:
     Space:
@@ -162,34 +153,45 @@ components:
           format: uuid
         name:
           type: string
-          example: "Kota Kasablanka Lt 1 L2"
+          example: 'Kota Kasablanka Lt 1 L2'
         mall:
-          $ref: "#/components/schemas/Mall"
+          $ref: '#/components/schemas/Mall'
         size:
-          description: "in m^2"
+          description: 'in m^2'
           type: number
           example: 10
         shape:
           type: string
-          enum: ["square", "circle"]
+          enum: ['square', 'circle']
         price:
-          description: "in IDR/mo"
+          description: 'in IDR/mo'
           type: number
           example: 10000000
         allowed_tenant_type:
           type: array
           items:
             type: string
-            enum: ["food & beverage", "fashion", "kids & entertainment", "small retail", "beauty", "gadget & electronic", "health", "fitness", "home & living"]
+            enum:
+              [
+                'food & beverage',
+                'fashion',
+                'kids & entertainment',
+                'small retail',
+                'beauty',
+                'gadget & electronic',
+                'health',
+                'fitness',
+                'home & living',
+              ]
         image_url:
           type: array
           items:
             type: string
-            example: ["/img/1.png", "/img/2.png"]
+            example: ['/img/1.png', '/img/2.png']
     Spaces:
       type: array
-      items: 
-        $ref: "#/components/schemas/Space"
+      items:
+        $ref: '#/components/schemas/Space'
     Mall:
       properties:
         id:
@@ -197,52 +199,52 @@ components:
           format: uuid
         name:
           type: string
-          example: "Kota Kasablanka"
+          example: 'Kota Kasablanka'
         class:
           type: string
-          enum: ["elite", "medium", "slum"]
+          enum: ['elite', 'medium', 'slum']
         location:
           type: string
-          example: "Jakarta Barat"
+          example: 'Jakarta Barat'
         highlights:
           type: array
           items:
             type: string
-            example: ["Near airport"]
+            example: ['Near airport']
         image_url:
           type: array
           items:
             type: string
-            example: ["/img/1.png", "/img/2.png"]
+            example: ['/img/1.png', '/img/2.png']
         map_url:
           type: array
           items:
             type: string
-            example: ["/maps/1.svg", "/maps/2.svg"]
+            example: ['/maps/1.svg', '/maps/2.svg']
         spaces:
           type: array
-          items: 
+          items:
             $ref: '#/components/schemas/Space'
     Malls:
       type: array
-      items: 
-        $ref: "#/components/schemas/Mall"
+      items:
+        $ref: '#/components/schemas/Mall'
     Rent:
       properties:
         id:
           type: string
           format: uuid
         space:
-          $ref: "#/components/schemas/Space"
+          $ref: '#/components/schemas/Space'
         user_id:
           type: string
           format: uuid
         price:
-          description: "in IDR/mo"
+          description: 'in IDR/mo'
           type: number
           example: 10000000
         interval:
-          description: "in months"
+          description: 'in months'
           type: number
           example: 1
         next_payment:
@@ -260,25 +262,25 @@ components:
           type: string
           format: uuid
         reference_price:
-          description: "in IDR/mo"
+          description: 'in IDR/mo'
           type: number
           example: 10000000
         current_price:
-          description: "in IDR/mo"
+          description: 'in IDR/mo'
           type: number
           example: 15000000
         changes:
-          description: "in %"
+          description: 'in %'
           type: number
           example: 50
     Rents:
       type: array
       items:
-        $ref: "#/components/schemas/Rent"
+        $ref: '#/components/schemas/Rent'
     Watchlists:
       type: array
       items:
-        $ref: "#/components/schemas/Watchlist"
+        $ref: '#/components/schemas/Watchlist'
     CreateRentQuery:
       properties:
         space_id:
@@ -288,7 +290,7 @@ components:
           type: string
           format: uuid
         interval:
-          description: "in months"
+          description: 'in months'
           type: number
           example: 1
         price:
@@ -319,20 +321,17 @@ components:
         token:
           type: string
           format: JWT
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+          example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c'
     AuthQuery:
       properties:
         username:
           type: string
-          example: "user123"
+          example: 'user123'
         password:
           type: string
-          example: "password"
+          example: 'password'
   securitySchemes:
     JWTAuth:
       type: http
-      scheme: bearer   
+      scheme: bearer
       bearerFormat: JWT
-      
-      
-      
